Storable preferences. Closes #8. Fixes 14-pack setting.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@11 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ ul { list-style-type: none }
 
 	.timerControls { visibility: hidden; font-size: 60%; max-width: none;
 		line-height: 1em }
+	.info,
 	.appname { font-size: 60% }
 		.appname .version { font-size:120% }
 	.warning { color: #BE0000 }
