Small positioning fix.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@13 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ ul { list-style-type: none }
 
 /* positioning */
 	.timer { text-align: center }
+	#settings label { margin-left: 1ex }
 
 /* appearance */
 	button { padding: 1em 2em; font-size: 150%; width: 100% }
