Damn localization is done!
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@22 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,5 @@ ul { list-style-type: none }
 	.appname { font-size: 60%; line-height: 1em }
 		.appname .version { font-size:120% }
 	.warning { color: #BE0000 }
+
+	.languageSelector img { cursor: pointer; border: 1px solid black; margin-right: 1em }
