Closes #11. "5 seconds instead of 10" option.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@29 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,10 @@ ul { list-style-type: none }
 /* positioning */
 	.timer { text-align: center }
 	#settings label { margin-left: 1ex }
+	#settings p { margin-bottom: 0.5ex }
 		.setCustomizer { text-align: center }
 		.setCustomizer input { width: 30%; text-align: center }
+
 
 /* appearance */
 	button { padding: 1em 2em; font-size: 150%; width: 100% }
