Now testing of sounds existance is integrated.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@39 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,5 @@ ul { list-style-type: none }
 	.warning { color: #BE0000 }
 
 	.languageSelector img { cursor: pointer; border: 1px solid black; margin-right: 1em }
+
+	#settings .warning { font-size: 70%; line-height: 1em; margin-top: -0.5em; display: none }
