--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ ul { list-style-type: none }
 	.pulse { visibility: hidden; color: red; font-size: 150%; margin: 0; padding: 0; }
 	.template { color: #828300; font-style: normal }
 
+	.decosec { font-size: 50% }
 	.info { margin-top: 1ex }
 	.info,
 	.timerControls { visibility: hidden; font-size: 60%;
