--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,8 @@ fieldset { border: 0 }
 h1, h2 { margin-bottom: 1ex }
 h1 { margin-top: 4ex; font-size: 190% }
 h2 { margin-top: 3ex; font-size: 150% }
-h3 { margin-top: 2ex; margin-left: 2em; font-size: 110% }
-h4 { margin-top: 1ex; margin-left: 3em; font-size: 100% }
+h3 { margin-top: 2ex; font-size: 110% }
+h4 { margin-top: 1ex; font-size: 100% }
 p { margin-bottom: 1em }
 p img { vertical-align: text-top }
 ul { list-style-type: none }
