--- a/css/styles.css
+++ b/css/styles.css
@@ -87,4 +87,6 @@ ul { list-style-type: none }
 
 	.languageSelector img { cursor: pointer; border: 1px solid black; margin-right: 1em }
 
+	.update { font-size: 80%; text-align: center }
+
 	#settings .warning { font-size: 70%; line-height: 1em; margin-top: -0.5em; display: none }
