--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
 html { font-size: 14px }
 body {
 	font-family: "URW Gothic L", "Monaco", "Century Gothic",
+		Gothic,
 		Calibri, "Luicida Sans Unicode", Delicious,
 		 Georgia, Verdana, Tahoma, sans-serif;
 	background-color: #fff;
